Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
qpid-cpp-1.38.0
-
None
-
Gentoo x64, GCC 8.1
Description
[ 30%] Building CXX object src/CMakeFiles/qpidcommon.dir/qpid/sys/Dispatcher.cpp.o
/home/chrisr/projects/qpid/qpid-cpp/source/src/qpid/log/Statement.cpp: In static member function ‘static qpid::log::Category qpid::log::CategoryFileNameHints::categoryOf(const char*)’:
/home/chrisr/projects/qpid/qpid-cpp/source/src/qpid/log/Statement.cpp:121:50: error: type qualifiers ignored on cast result type [-Werror=ignored-qualifiers]
if (strstr(fName, (const char* const)it->first) != 0) {
Attachments
Issue Links
- links to