QPID-8188 Invalid type qualifiers causes build failure on GCC 8